Car management/force-app/main/default/objects/Oferta__c/Oferta__c.object-meta.xml
<CustomObject>
    <label>Oferta</label>
    <nameField>
        <label>Oferta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oferty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>