Car management/force-app/main/default/objects/Oferta__c/fields/Pojazd__c.field-meta.xml
<CustomField>
    <fullName>Pojazd__c</fullName>
    <label>Pojazd</label>
    <referenceTo>Pojazd__c</referenceTo>
    <relationshipLabel>Oferty</relationshipLabel>
    <relationshipName>Oferty</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>