Car management/force-app/main/default/objects/Oferta__c/fields/Salon__c.field-meta.xml
<CustomField>
    <fullName>Salon__c</fullName>
    <label>Salon</label>
    <referenceTo>Salon__c</referenceTo>
    <relationshipLabel>Oferty</relationshipLabel>
    <relationshipName>Oferty</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>