Car management/force-app/main/default/objects/Oferta__c/fields/Stan__c.field-meta.xml
<CustomField>
    <fullName>Stan__c</fullName>
    <label>Oferta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wirtualna</fullName>
                <default>true</default>
                <label>Wirtualna</label>
            </value>
            <value>
                <fullName>Fizyczna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>